--- a/style/transmission/soft-theme.css
+++ b/style/transmission/soft-theme.css
@@ -216,9 +216,9 @@ div#torrent_inspector #inspector_file_list li {
   padding: 7px 0;
 }
 
-div#torrent_inspector li.inspector_tracker_entry.odd {
+/*div#torrent_inspector li.inspector_tracker_entry.odd {
   background-color: transparent;
-}
+}*/
 
 div.inspector_group_label {
   padding-bottom: 5px;
